# mcp-mikrotik

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  devices.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ANTIGRAVITY-PROMPT.md  ANTIGRAVITY-REVIEW.md  REVIEW-CHECKLIST.md  REVIEW-FINDINGS.md  api-notes-wireless-rf.md
src/mcp_mikrotik/: __init__.py  audit.py  client.py  config.py  correlation.py  exceptions.py  formatting.py  guard.py  security.py  server.py  validation.py
tests/: conftest.py  fakes.py  test_audit.py  test_client.py  test_config.py  test_correlation.py  test_formatting.py  test_guard.py  test_guard_audit.py  test_security.py  test_server.py  test_validation.py
