[project]
name = "mcp-mikrotik"
version = "0.1.0"
description = "Model Context Protocol server for managing MikroTik RouterOS devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thalis Antunes" }]
keywords = ["mcp", "mikrotik", "routeros", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "librouteros>=3.4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
mcp-mikrotik = "mcp_mikrotik.server:main"

[project.urls]
Homepage = "https://github.com/thalisantunes/mcp-mikrotik"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mikrotik"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
